--- a/homeworkplusweek6.html
+++ b/homeworkplusweek6.html
@@ -72,7 +72,12 @@
         </div>
       </div>
     </div>
-    <a class="source-code" href="" target="_blank">Open source code</a>
+    <a
+      class="source-code"
+      href="https://github.com/minoovr/homeworl-plus-week6"
+      target="_blank"
+      >Open source code</a
+    >
     <script src="homeworkplusweek6.js"></script>
   </body>
 </html>
